@@ -510,6 +510,8 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.0.0-M7</version>
         <configuration>
+          <!-- E.g. some tests in nl.vpro.api.rs.filter.ApiMediaFilterTest may fail otherwise -->
+          <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
           <systemPropertyVariables>
             <projectArtifactId>${project.artifactId}</projectArtifactId>
           </systemPropertyVariables>
